[package]
name = "rust-memory"
version = "0.1.0"
edition = "2024"


[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
serde = "1.0.0"
serde_derive = "1.0.0"
openai_api_rust = "0.1.9"
dotenvy = "0.15"
serde_json = "1.0"
neo4rs = { version = "0.9.0-rc.9" }
regex = "1.3"
uuid = { version = "1", features = ["v4"] }