[package]
name = "rust-memory"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
serde = { version = "1.0.0", features = ["derive"] }
serde_derive = "1.0.0"
serde_json = "1.0"
openai_api_rust = "0.1.9"
dotenvy = "0.15"
neo4rs = { version = "0.9.0-rc.9" }
regex = "1.3"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
redis = { version = "0.25", features = ["aio", "tokio-comp"] }